@@ -1,3 +1,6 @@
+[2023/11/17]
+1. Add Quest 3 monitor.
+
 [2023/05/15]
 1. Add Pico NEO 3Pro monitor.
 
